<resources>
  <string name="app_name" translatable="false">ISBN Lookup</string>
  <string name="actionbar_settings_name">Settings</string>
  <string name="activity_main_isbn_input_hint">ISBN</string>
  <string name="activity_main_isbn_submit_button">Lookup!</string>
  <string name="invalid_isbn">Invalid ISBN</string>
  <string name="activity_display_book_information_title">Book Information</string>
  <string name="book_information_no_data">No data.</string>
  <string name="book_formatter_authors_format" translatable="false">%1$s  (%2$s)</string>
  <string name="book_information_fetching">Fetching ISBN \'%1$s\'</string>
  <string name="preferences_group_fetcher_locale_title">Locale</string>
  <string name="preferences_group_fetcher_locale_summary">The current locale is \'%1$s\'.</string>
  <string name="preferences_group_fetcher_title">Fetcher settings</string>
  <string name="preferences_group_fetcher_chosen_summary">Using fetcher \'%s\'</string>
  <string name="preferences_group_fetcher_chosen_title">Selected Fetcher</string>
  <string name="actionbar_scan_name">Scan</string>
  <string name="TITLE">Title</string>
  <string name="AUTHORS">Authors</string>
  <string name="PUBLISHER">Publisher</string>
  <string name="COVER_TYPE">Cover type</string>
  <string name="DESCRIPTION">Description</string>
  <string name="PAGE_COUNT">Page count</string>
  <string name="LANGUAGE">Language</string>
  <string name="ISBN_STRING">ISBN</string>
  <string name="PRICE">Price</string>
  <string name="RATING">Rating</string>
  <string name="URL" translatable="false">Url</string>
  <string name="history_list_no_history">Nothing yet</string>
  <string name="actionbar_history_name">History</string>
  <string name="activity_history_clear_all_button_name">Clear all</string>
  <string name="history_list_element_popup_title">Options</string>
  <string name="history_list_element_popup_delete">Delete</string>
  <string name="history_unknown_book_title">Unknown title</string>
  <string name="history_list_element_popup_lookup">Lookup</string>
  <string name="activity_main_title" translatable="false">ISBN Lookup</string>
  <string name="book_formatter_wikipedia_search_url"><![CDATA[https://en.wikipedia.org/w/index.php?search=%s]]></string>
</resources>
