<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
    android:title="@string/preferences_group_fetcher_title">

    <ListPreference
      android:defaultValue="amazon"
      android:title="@string/preferences_group_fetcher_chosen_title"
      android:entries="@array/preferences_group_fetcher_fetchers_labels"
      android:entryValues="@array/preferences_group_fetcher_fetchers_values"
      android:summary="@string/preferences_group_fetcher_chosen_summary"
      android:key="preferences_group_fetcher_chosen"
      />

    <ListPreference
      android:defaultValue="de"
      android:title="@string/preferences_group_fetcher_locale_title"
      android:entries="@array/preferences_group_fetcher_languages_labels"
      android:entryValues="@array/preferences_group_fetcher_languages"
      android:key="preferences_group_fetcher_locale"
      android:summary="@string/preferences_group_fetcher_locale_summary"/>

  </PreferenceCategory>
</PreferenceScreen>